--- a/no-animation.css
+++ b/no-animation.css
@@ -3,19 +3,47 @@
   height: 54em !important;
 }
 
-.layout-desktop .detailRibbon, .layout-tv .detailRibbon {
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) #itemBackdrop,
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button.show-focus[data-type="Season"]) #itemBackdrop {
+  height: 41.5em !important;
+}
+
+.layout-desktop .detailRibbon, 
+.layout-tv .detailRibbon {
   height: 5em;
   margin-top: -5em;
 }
 
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .trackSelections, 
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button.show-focus[data-type="Season"]) .trackSelections {
+  top: 44.8em !important;
+}
+
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .itemName.infoText.originalTitle,
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .itemName.infoText.originalTitle {
+  top: 4em;
+}
+
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .nameContainer, .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button.show-focus[data-type="Season"]) .nameContainer,
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .nameContainer, .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button.show-focus[data-type="Season"]) .nameContainer {
+  top: 36.5em !important;
+}
+
+.layout-desktop .itemName.infoText.subtitle, 
+.layout-tv .itemName.infoText.subtitle {
+  top: 6em;
+}
+
 .layout-desktop #itemDetailPage .itemExternalLinks,
 .layout-tv #itemDetailPage .itemExternalLinks,
-.layout-desktop .itemName.infoText.originalTitle,
-.layout-desktop .itemName.infoText.parentNameLast,
+.itemName.infoText.originalTitle,
+.itemName.infoText.parentNameLast,
 .layout-desktop .parentName.musicParentName.focuscontainer-x,
 .layout-desktop .itemDetailPage:has(.itemName.parentNameLast) #itemBackdrop, .layout-desktop .itemDetailPage:has(.button-flat.mediaInfoItem.emby-button) #itemBackdrop,
 .layout-desktop .trackSelections,
-.layout-tv .trackSelections {
-  animation: none;
-  opacity: 1;
+.layout-tv .trackSelections,
+.itemsContainer,
+.itemDetailsGroup {
+  animation: none !important;
+  opacity: 1 !important;
 }
